--- a/cv_ex.css
+++ b/cv_ex.css
@@ -69,7 +69,7 @@
   .left-column{
     grid-area: left-column;
     padding: 50px;
-    background-color: #4472C4;
+    background-color: #103676;
     color: white;
   }
   
