--- a/cvsam.css
+++ b/cvsam.css
@@ -1,5 +1,5 @@
 *{
-    margin : 10; 
+    margin : 0; 
     box-sizing : border-box;
 }
 /*Le texte du corps de la page*/
@@ -41,3 +41,19 @@ h2{
     background-color: #4c5d6c;
     color: white;
 }
+
+.portait{
+    border-radius: 0%;
+    max-width: 150px;
+    margin: auto;
+    display: block;
+    margin-bottom: 50px;
+  }
+.right-column{
+    grid-area: right-column;
+    display: grid;
+    grid-template-rows: 250px 1fr;
+    grid-template-areas: 
+      "header"
+      "content";
+  }
