--- a/cvsam.css
+++ b/cvsam.css
@@ -32,11 +32,16 @@ h2{
     grid-template-columns: 1fr 1fr 1fr; /* met le texte de la colomne de gauche dans la colonne */
     grid-template-areas: "left-column right-column right-column";
     width: 1200px;
-    margin-top: 40;
+    margin-top: 150px;
 }
 
 .section{
     margin-bottom: 1.5rem;
+}
+
+.intro{
+    padding-top: 0px;
+    margin-top: 0%;
 }
 
 .left-column{
@@ -53,7 +58,7 @@ h2{
     margin: auto;
     display: block;
     margin-bottom: 50px;
-    margin-top: 10;
+    margin-top: 30px;
   }
 .right-column{
     grid-area: right-column;
@@ -64,6 +69,7 @@ h2{
       "content";
   }
   .content{
+      margin-top: 0px;
       grid-area: content;
       padding: 50px;
   }
@@ -71,12 +77,12 @@ h2{
   #top1{
       position: absolute;
       top: 10px;
-      left: 10px;
+      left: 0px;
       right: 0px;
-      width: 100%;
-      height: 200px;
+      width: 120%;
+      height: 6cm;
       padding: 0px;
-      margin-top: 0;
+      margin-top: 2%;
   }
   #top2{
       position:absolute;
