--- a/cvsam.css
+++ b/cvsam.css
@@ -5,9 +5,8 @@
 /*Le texte du corps de la page*/
 body{
     font-family: 'Times New Roman', Times, serif;
-    font-weight: 300;
-    font-size: 0.99rem;
-    line-height: 1.4;
+    font-size: 1rem; /*taille de la police*/
+    line-height: 1.5;/*interligne*/
 }
 
 p{
@@ -23,13 +22,12 @@ h1{
 h2{
     margin: 0 0 1rem;
     letter-spacing: 0;
-    text-transform:none;
 }
 
 /*le contenu du CV*/
 .cv-container{
     display:grid;
-    grid-template-columns: 1fr 1fr 1fr; /* met le texte de la colomne de gauche dans la colonne */
+    grid-template-columns: 1fr 1fr 1fr; /* détermine la place de la colonne de gauche */
     grid-template-areas: "left-column right-column right-column";
     width: 1200px;
     margin-top: 150px;
@@ -63,7 +61,7 @@ h2{
 .right-column{
     grid-area: right-column;
     display: grid;
-    grid-template-rows: 250px 1fr;
+    grid-template-rows: 60px 1fr; /* Hauteur de la grid de la colonne droite, permet d'avoir un écart correct entre bannière et corps */
     grid-template-areas: 
       "header"
       "content";
@@ -79,7 +77,7 @@ h2{
       top: 10px;
       left: 0px;
       right: 0px;
-      width: 120%;
+      width: 130%; /*largeur de la bannière, 130 car 130 en bas et que 100 ne remplit pas tout*/
       height: 6cm;
       padding: 0px;
       margin-top: 2%;
@@ -88,7 +86,7 @@ h2{
       position:absolute;
       left: 0px;
       right: 0px;
-      width: 100%;
+      width: 130%;
       height: 6cm;
       padding-bottom: 100px;
   }
